@@ -1,3 +1,7 @@
+2010-10-15  Sam Steingold  <sds@gnu.org>
+
+	* pathname.d (PROBE-PATHNAME): fix open stream handling
+
 2010-10-12  Sam Steingold  <sds@gnu.org>
 
 	* modules/editor: resurrect editor.lisp from 1998; update and fix
